fix overflow bug hopefully

--- a/frontend/stylesheets/base/chat.scss
+++ b/frontend/stylesheets/base/chat.scss
@@ -4,6 +4,10 @@
   font-family: 'Roboto', sans-serif;
 }
 
+body {
+  overflow: hidden;
+}
+
 ul li {
     word-break: break-all;
 }
